# stl

./: .gitignore  .travis.yml  LICENSE  README.md  stack.yaml
snaplet-stl/: snaplet-stl.cabal
snaplet-stl/src/Snap/Snaplet/STL/: View.hs
snaplet-stl/stl-view/: Main.hs
stl/: LICENSE  report.html  stl.cabal
stl/harness/: Main.hs
stl/src/Data/STL/: BinaryParser.hs  Geometry.hs  Parser.hs  TextEnumerator.hs  TextParser.hs  Topology.hs
stl/src/STL/Data/: BinaryParser.hs  Parser.hs  Topology.hs
test-data/: raw.stl
